crates/cctui-tui/src/snapshots/cctui__view_snapshots__session_list_batch_archive_confirm.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 283
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  4 sessions  ● 3 active  ! 1 need input — Ctrl+g
 Sessions
   ▾ Needs input (1)
▸    [x] ● [claude-code] infra (main)  opus  0s  $1.25
   ▾ Working (1)
     [x] ● [claude-code] cctui (main)  opus  0s  $1.25
     ▾ subagents (1/1 running)
       ↳ [x] ● [claude-code] cctui-sub (main)  opus  0s  $1.25
   ▾ Completed (1)
     [x] ○ [claude-code] notes (main)  opus  0s  $1.25













 Archive 4 sessions? y/N
