crates/cctui-tui/src/snapshots/cctui__view_snapshots__session_list_compact_rows.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 301
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  4 sessions  ● 3 active  ! 1 need input — Ctrl+g
 Sessions  starred · live · dispatched  sort: activity ↓  group: status
   ▾ Needs input (1)
▸    ● [claude-code] infra (main)
   ▾ Working (1)
     ● [claude-code] cctui (main)
     ▾ subagents (1/1 running)
       ↳ ● [claude-code] cctui-sub (main)
   ▾ Completed (1)
     ○ [claude-code] notes (main)













 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
