crates/cctui-tui/src/snapshots/cctui__view_snapshots__session_list_grouped_by_machine.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 1611
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 1/3 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2 Overview  3 Machines   starred · live · dispatched  sort: activity ↓  group: machine
   ▾ ● cyberia-2 (stale) (1)
▸    ● [claude-code] infra (main) ▫  opus  0s  $1.25
   ▾ ● cyberia-1 (online) (1)
     ● [claude-code] cctui (main)  opus  0s  $1.25
     ▾ subagents (1/1 running)
       ↳ ● [claude-code] cctui-sub (main)  opus  0s  $1.25
   ▾ ● orion (offline) (1)
     ○ [claude-code] notes (main) ✗  opus  0s  $1.25













 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
