crates/cctui-tui/src/snapshots/cctui__view_snapshots__session_list_grouped_by_machine_with_accents.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 155
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  4 sessions  ● 3 active  ! 1 need input — Ctrl+g
 Sessions  starred · live · dispatched  sort: activity ↓  group: machine
   ▾ ● cyberia (1)
▸ ▏   ● [claude-code] infra (main)  opus  0s  $1.25
   ▾ ● orion (2)
  ▏   ● [claude-code] cctui (main)  opus  0s  $1.25
     ▾ subagents (1/1 running)
  ▏     ↳ ● [claude-code] cctui-sub (main)  opus  0s  $1.25
  ▏   ○ [claude-code] notes (main)  opus  0s  $1.25














 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
