crates/cctui-tui/src/snapshots/cctui__view_snapshots__session_list_narrowed_by_a_label_filter.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 1662
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  labels: docs  ! 1 need input — Ctrl+g
 1 Sessions  2  3  4  6  8   starred · live · dispatched  sort: activity ↓  group: status
   ▾ Completed (1)
▸    ○ [claude-code] notes (main)  opus  0s  $1.25 [docs] [infra] +2



















 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
